--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,10 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# Enforce Unix newlines
+*.css   text eol=lf
+*.scss  text eol=lf
+*.html  text eol=lf
+*.js    text eol=lf
+*.md    text eol=lf
+*.svg   text eol=lf
+*.yml   text eol=lf
+# Don't diff or textually merge source maps
+*.map   binary
